Video displaying above scene.

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -21,7 +21,7 @@
         console.log(event.x, event.y)
       })
     </script>
-    <!-- <a-scene>
+    <a-scene>
       <a-assets>
         <img id="groundTexture" src="https://cdn.aframe.io/a-painter/images/floor.jpg">
         <img id="skyTexture" src="https://cdn.aframe.io/a-painter/images/sky.jpg">
@@ -33,7 +33,7 @@
       <a-light type="ambient" color="#445451"></a-light>
       <a-light type="point" intensity="2" position="2 4 4"></a-light>
       <a-sky height="2048" radius="30" src="#skyTexture" theta-length="90" width="2048"></a-sky>
-    </a-scene> -->
+    </a-scene>
 
     <!-- GitHub Corner. -->
     <a href="https://github.com/jsimonson2013/aframe-head-tracker-controls-component" class="github-corner">
