Added z-position. Refactored to schema-ize it.

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -17,7 +17,7 @@
       htracker.init(videoInput, canvasInput);
       htracker.start();
     </script>
-    <a-scene head-tracker-controls>
+    <a-scene head-tracker-controls="xScale: 0.3; yScale: 0.3; zScale: 0.1; xShift: 0.0; yShift: 1.6; zShift: 0.0;">
       <a-assets>
         <img id="groundTexture" src="https://cdn.aframe.io/a-painter/images/floor.jpg">
         <img id="skyTexture" src="https://cdn.aframe.io/a-painter/images/sky.jpg">
