--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
         <h3>Basic</h3>
         <p>This is a basic example.</p>
       </li>
+      <li>
+        <a href="examples/rabbit_hole/" style="background-image: url(https://cloud.githubusercontent.com/assets/674727/24217331/ba3d5b86-0efc-11e7-8a7c-ac74b3f35a65.png)"></a>
+        <h3>Rabbit</h3>
+        <p>Take a look through the rabbit hole.</p>
+      </li>
     </ul>
 
     <!-- GitHub Corner. -->
